--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 #profile active
 server.port=8990
 #base path
-server.servlet.context-path=/v1/sdvp/api
+server.servlet.context-path=/sdvp/api
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
 spring.jpa.show-sql=true
