--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,1 +1,29 @@
-server.port=9090
+
+#profile active
+server.port=8990
+#base path
+server.servlet.context-path=/sdvp/api
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
+spring.jpa.show-sql=true
+
+swagger-ui: show:true
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+spring.datasource.url=jdbc:oracle:thin:@(DESCRIPTION = (ADDRESS = (PROTOCOL = TCP)(HOST = 10.6.0.15)(PORT = 1532)) (CONNECT_DATA = (SERVER = DEDICATED) (SERVICE_NAME = dvoefabd)))
+
+spring.datasource.username=SDVP
+spring.datasource.password=desarrollo
+
+
+#Configuracion Servidor LOCAL
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+#spring.datasource.username=OEFA-DEVELOPMENT
+#spring.datasource.password=123
+
+
+
+#spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+
+#spring.datasource.jndi-name=java:jboss/sdvp-ds
+#spring.datasource.jndi.resourceRef=true
